layout problem fixed

--- a/style.css
+++ b/style.css
@@ -254,7 +254,7 @@ header ul a {
     align-items: center;
     width: 80%;
     margin-top: 100px;
-    margin: 100px auto;
+    margin: 50px auto;
 }
 .section-title{
     font-size: 40px;
@@ -365,8 +365,8 @@ header ul a {
     position: relative;
     width: 80%;
     height: 100vh;
-    margin: 200px;
-    margin-bottom: 700px;
+    margin: 100px;
+    margin-bottom: 500px;
 }
 
 .project-card{
